# Start-projects

./: .gitignore  README.md  pom.xml
.github/workflows/: maven.yml
CShaprConsoleProjects/0-My_first_program/: My_first_program.sln  Program.cs
CShaprConsoleProjects/1-My_second_porgram/: 1-My_second_program.csproj  Program.cs
JavaBackEndProjects/src/: README.md
JavaConsoleProjects/: course.md
JavaConsoleProjects/src/: stone_paper_scissor_3.java
android-projects/: README.md
azure-swa/: How to use Azure_Hungarian version.doc  README.md
csharp-console/: Simple _Sum.cs
java-backend/: .project
java-backend/src/: README.md
java-console/: .project  README.md
java-console-intermediate/: README.md  webshopdata.csv
java-gui/: .project
python-console/Html+css+python_projects/: pyproject.toml  readme_frontend_projects.txt
python-console/Html+css+python_projects/Python_basic_101/1-hello-world/: 1-hello-world.py
python-console/Html+css+python_projects/Python_basic_101/2-variables/: 2-variables.py  Pythagoras.py
python-console/Html+css+python_projects/Python_basic_101/3-control-flow/: coin_flip.py  grade_check.py  magic_8_ball.py  pH_levels.py  sort_hat.py  the_cyclone.py  tired_check.py
python-console/Html+css+python_projects/Python_websites/0-Python_to_html_connection/: index_py_to_html_connection.html  main_py_to_html_connection.py
python-console/Html+css+python_projects/Python_websites/1-Entity_example/: Entity_example.py  Entity_example_main.html  styles_Entity_example.css
static-websites/: README.md
static-websites-exams/: README.md
(+147 files in other folders)
