[project]
name = "30DaysOfPython--Nagraggini"
version = "0.0.1"
authors = [
  { name="Nagraggini", email="freudandrea0520@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Nagraggini/30DaysOfPython--Nagraggini"
Issues = "https://github.com/Nagraggini/30DaysOfPython--Nagraggini/issues"

keywords = ["python", "example", "tutorial"]
dependencies = []
